# Portal

./: README.md
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  AuthProvider.jsx  axiosinstance.js  main.jsx
Frontend/src/components/: AuthForm.jsx  Dashboard.jsx  Footer.jsx  Hero.jsx  Navbar.jsx
Frontend/src/components/dashboard/: Dashboard.jsx
backend/: pyproject.toml
backend/accounts/: serializers.py  views.py
backend/api/: urls.py
backend/stock_prediction_main/: settings.py  urls.py
