[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ankitraj20616",email = "ankitrajthakur803@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "django (<6.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
